methods.picture.PictureMono3.scala.error
Compilation error:
PictureMono3:15: error: ';' expected but 'override' found.
                   }override def run() {
                    ^