methods.picture.PictureMono3.scala.code
override def run() {
def faireV()  {avance();marquer();recule();gauche();avance();marquer();recule();droite();droite();avance();marquer();avance();avance();gauche();avance();avance();avance();gauche();}

def marquer() {baisseBrosse();leveBrosse();}

                   
def faireMotif ()  {avance();avance();avance();gauche();faireV();faireV();faireV();faireV();droite();avance();avance();avance();avance();}
  
def changeEtage () {gauche();avance();avance();avance();avance();avance();avance();avance();droite();}
                   
                   
faireMotif();faireMotif();faireMotif();changeEtage();faireMotif();faireMotif();faireMotif();changeEtage();faireMotif();faireMotif();faireMotif();changeEtage();faireMotif();faireMotif();faireMotif();changeEtage();faireMotif();faireMotif();faireMotif();changeEtage();faireMotif();faireMotif();faireMotif();changeEtage();faireMotif();faireMotif();faireMotif();changeEtage();faireMotif();faireMotif();faireMotif();changeEtage();faireMotif();faireMotif();faireMotif();changeEtage();
                   
                   
                   }override def run() {
}